--- a/Android/Remo/res/values/strings.xml
+++ b/Android/Remo/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Remo</string>
-    <string name="IP">192.168.1.20</string>
+    <!--<string name="IP">192.168.1.20</string>-->
+    <string name="IP"> 192.168.43.185</string>
     <string name="Port">4447</string>
     <string name="device_description">Test Desc</string>
 	
